--- a/global_change_lab/templates/new_user_topics.html
+++ b/global_change_lab/templates/new_user_topics.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="new-user-progress">
-    <span class="white">1 2 3</span>
+    1 2 <span class="white">3</span>
     <button class="button large next">Start</button>
   </div>
   </form>
