--- a/scss/app.scss
+++ b/scss/app.scss
@@ -22,6 +22,7 @@
 @import "scss/profile";
 @import "scss/user_progress";
 @import "scss/imageupload";
+@import "scss/user_info_form.scss";
 
 %entypo {
   font-family: 'EntypoRegular';
