[Design] Change text on "Start" button at end of welcome-flow

--- a/global_change_lab/templates/new_user_topics.html
+++ b/global_change_lab/templates/new_user_topics.html
@@ -19,7 +19,7 @@
 
   <div class="new-user-progress">
     1 2 <span class="white">3</span>
-    <button class="button large next">Start</button>
+    <button id="start-using-gcl" class="button next">Start using Global Change Lab</button>
   </div>
   </form>
 </div>
