[Cleanup] Add $button-font-size and make .admin-button global

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -18,6 +18,8 @@ $gcl-blue: #4B81BF;
 
 $page-buttons-overlay: absolute;
 
+$button-font-size: rem-calc(12px);
+
 %stencil-font {
   font-family: 'Allerta Stencil', sans-serif;
 }
