--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1029,7 +1029,7 @@ $info-color: $gcl-lightgray;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: #333;
+$topbar-bg-color: $gcl-lightgray;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
@@ -1041,7 +1041,7 @@ $info-color: $gcl-lightgray;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-// $topbar-dropdown-bg: #333;
+$topbar-dropdown-bg: $gcl-lightgray; //#333;
 // $topbar-dropdown-link-color: #fff;
 // $topbar-dropdown-link-bg: #333;
 // $topbar-dropdown-link-weight: normal;
@@ -1061,7 +1061,7 @@ $info-color: $gcl-lightgray;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
 
-// $topbar-button-font-size: 0.75rem;
+// $topbar-button-font-size: $button-font-size;
 
 // $topbar-dropdown-label-color: #777;
 // $topbar-dropdown-label-text-transform: uppercase;
