[Fix] training bit permission checks (for authors)
+ `skills/models.py`: Correct the way `AuthorPermissionLogic` is used.
+ trainingbit_cover, trainingbit_view: Correct the way `permissionif` is used.

--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -6,12 +6,12 @@
 
 <div class="page-buttons">
   {# Edit trainingbit button #}
-  {% permission request.user has 'trainingbit.edit'  %}
+  {% permission request.user has 'skills.change_trainingbit' of trainingbit %}
     <a href="{% url 'skills:trainingbit_edit' trainingbit.id %}" class="button info admin-button">Edit training bit</a>
   {% endpermission %}
 
   {# Delete trainingbit button #}
-  {% permission request.user has 'trainingbit.delete'  %}
+  {% permission request.user has 'skills.delete_trainingbit' of trainingbit %}
     <a href="{% url 'skills:trainingbit_delete' trainingbit.id %}" data-dynamic="false" class="button hard-delete admin-button">Delete training bit</a>
   {% endpermission %}
 </div>
