--- a/scss/app.scss
+++ b/scss/app.scss
@@ -199,6 +199,10 @@ h1, h2, h3, h4, h5, h6 {
   @extend %text-white-on-darkgray;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
 span {
   font-size: $rem-base;
